--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11-jdk-alpine
-ARG JAR_FILE
+FROM openjdk:13-jdk-alpine
+ARG JAR_FILE=demo-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","/app.jar", "--spring.profiles.active=postgres"]
