--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -7,7 +7,8 @@ plugins {
 
 group = 'com.quickbase.demo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 repositories {
     mavenCentral()
