--- a/demo/src/main/resources/application-postgres.properties
+++ b/demo/src/main/resources/application-postgres.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://10.0.2.15:5432/demodb
+spring.datasource.url=jdbc:postgresql://localhost:5432/demodb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
